--- a/src/styles/style111.css
+++ b/src/styles/style111.css
@@ -9,119 +9,17 @@ body {
     margin: 0;
 }
 
-.row::after {
-    content: "";
-    clear: both;
-    display: table;
+.flex {
+    display: flex;
+    flex-wrap: wrap;
 }
 
-[class*="col-"] {
-    float: left;
-    padding: 15px;
+.main {
+flex: 50%;
 }
 
-[class*="col-"] {
-    width: 100%;
-}
-
-@media screen and (min-width: 600px) {
-    .col-s-1 {
-        width: 8.33%;
-    }
-
-    .col-s-2 {
-        width: 16.66%;
-    }
-
-    .col-s-3 {
-        width: 25%;
-    }
-
-    .col-s-4 {
-        width: 33.33%;
-    }
-
-    .col-s-5 {
-        width: 41.66%;
-    }
-
-    .col-s-6 {
-        width: 50%;
-    }
-
-    .col-s-7 {
-        width: 58.33%;
-    }
-
-    .col-s-8 {
-        width: 66.66%;
-    }
-
-    .col-s-9 {
-        width: 75%;
-    }
-
-    .col-s-10 {
-        width: 83.33%;
-    }
-
-    .col-s-11 {
-        width: 91.66%;
-    }
-
-    .col-s-12 {
-        width: 100%;
-    }
-}
-
-@media screen and (min-width: 768px) {
-    .col-1 {
-        width: 18.33%;
-    }
-
-    .col-2 {
-        width: 16.66%;
-    }
-
-    .col-3 {
-        width: 15.58%;
-    }
-
-    .col-4 {
-        width: 13.33%;
-    }
-
-    .col-5 {
-        width: 41.66%;
-    }
-
-    .col-6 {
-        width: 50%;
-    }
-
-    .col-7 {
-        width: 58.33%;
-    }
-
-    .col-8 {
-        width: 66.66%;
-    }
-
-    .col-9 {
-        width: 75%;
-    }
-
-    .col-10 {
-        width: 84.42%;
-    }
-
-    .col-11 {
-        width: 91.66%;
-    }
-
-    .col-12 {
-        width: 100%;
-    }
+.side {
+flex: -1%;
 }
 
 #title {
@@ -156,19 +54,19 @@ width: 23em;
 }
 
 #user {
+    width: 299px;
     height: 4em;
     padding: 1em 0em;
 }
 
 #user p {
     display: inline;
-    vertical-align: middle;
     margin-left: 0.75em;
 }
 
-#user a{
-    float: right;
-    padding: 10px;
+#user a {
+float: right;
+padding: 10px;
 }
 
 #news {
